--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="#welcome-section">Home</a></li>
             <li><a href="#projects">Work</a></li>
             <li><a href="#about-me">About</a></li>
+            <li><a href="#blog">Blog</a></li>
             <li><a href="#contact-link">Contact</a></li>
 
         </ul>
@@ -59,8 +60,8 @@
                 <hr class="short-line">Hello
 
             </div>
-            <h1>I'm Priyanshu Raj</h1>
-            <p>Full-stack web developer.</p>
+            <h1>I'm John Njoroge</h1>
+            <p>Web developer based in Kenya.</p>
 
             <p class="quote"> We live in a world constructed of code - and coders are the ones who built it for us. </p>
 
